Remove duplicated pictures.

--- a/GenerateGalleryIndex.ipynb
+++ b/GenerateGalleryIndex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -82,7 +82,7 @@
     "    }catch\n",
     "    {}\n",
     "\n",
-    "    if(fileNumber <= 13)\n",
+    "    if(fileNumber <= 15)\n",
     "    {\n",
     "        continue;\n",
     "    }\n",
@@ -177,7 +177,8 @@
     "\n",
     "    \n",
     "</body></html>\";\n",
-    "Console.WriteLine(output);"
+    "\n",
+    "File.WriteAllText(@\"C:\\Users\\kjawo\\Documents\\repo\\kjawogithubio\\gallery\\gallery01\\index.html\", output);"
    ]
   }
  ],
