Add architecture photography.

--- a/GenerateGalleryIndex.ipynb
+++ b/GenerateGalleryIndex.ipynb
@@ -180,6 +180,130 @@
     "\n",
     "File.WriteAllText(@\"C:\\Users\\kjawo\\Documents\\repo\\kjawogithubio\\gallery\\gallery01\\index.html\", output);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System.IO;\n",
+    "\n",
+    "var output = $@\"---\n",
+    "layout: page\n",
+    "title: \"\"Architecure photography\"\"\n",
+    "description: \"\"Konrad Jaworski\"\"\n",
+    "active: gallery\n",
+    "header-img: \"\"gallery/archive/g01/bg001.jpg\"\"\n",
+    "album-title: \"\"\"\"\n",
+    "images:\n",
+    "\";\n",
+    "\n",
+    "\n",
+    "DirectoryInfo info = new DirectoryInfo(@\"C:\\Users\\kjawo\\Documents\\repo\\kjawogithubio\\gallery\\archive\\g02\");\n",
+    "FileInfo[] files = info.GetFiles().OrderBy(p => p.Name).ToArray();\n",
+    "foreach(var file in files)\n",
+    "{ \n",
+    "\n",
+    "   output += $@\" - image_path: /gallery/archive/g02/{file.Name}\n",
+    "   caption: \n",
+    "   copyright: © Konrad Jaworski\n",
+    "\";\n",
+    "\n",
+    "}\n",
+    "output += $@\"---\n",
+    "\n",
+    "<html class=\"\"no-js\"\" lang=\"\"en\"\">\n",
+    "<head>\n",
+    "\t<meta content=\"\"charset=utf-8\"\">\n",
+    "</head>\n",
+    "\n",
+    "    <body>\n",
+    " \n",
+    "\t<section id=\"\"content\"\" role=\"\"main\"\">\n",
+    "\t\t<div class=\"\"wrapper\"\">\n",
+    "\t<br><br>\n",
+    "\t\t\t<h2>{{{{page.album-title}}}}</h2>\n",
+    "\n",
+    "\n",
+    "\t\t\t<!-- Gallery __-->\n",
+    "\t\t\t<div class=\"\"gallery masonry-gallery\"\">\n",
+    "\t\t\n",
+    "{{% for image in page.images %}}  \t\t\n",
+    "\n",
+    "\t\t\t\t<figure class=\"\"gallery-item\"\">\n",
+    "\t\t\t\t\t<header class='gallery-icon'>\n",
+    "\n",
+    "<a href=\"\"{{{{ site.url }}}}{{{{ site.baseurl }}}}{{{{ image.image_path }}}}\"\" class=\"\"popup\"\"  title=\"\"{{{{ image.caption }}}}\"\" data-caption=\"\"{{{{ image.copyright }}}}\"\">\n",
+    "<img src=\"\"{{{{ site.url }}}}{{{{ site.baseurl }}}}{{{{ image.image_path }}}}\"\"></a>\n",
+    "\t\t\t\t\t\t\n",
+    "\t\t\t\t\t</header>\t\n",
+    "\t\t\t\t\t<figcaption class='gallery-caption'>\n",
+    "\t\t\t\t\t\t<div class=\"\"entry-summary\"\" id=\"\"{{{{ image.caption }}}}\"\">\n",
+    "\t\t\t\t\t\t\t<h3>{{{{image.caption}}}}</h3>\n",
+    "\t\t\t\t\t\t\t<p>{{{{image.copyright}}}}</p>\n",
+    "\t\t\t\t\t\t</div>\n",
+    "\t\t\t\t\t</figcaption>\n",
+    "\t\t\t\t</figure>\n",
+    "\t\t\t\t\n",
+    "{{% endfor %}}\n",
+    "\n",
+    "\t\t\t</div>\n",
+    "\n",
+    "\t\t</div><!-- END .wrapper -->\n",
+    "\t</section>\n",
+    "\n",
+    "<!-- jQuery -->    \n",
+    "\n",
+    "<script type=\"\"text/javascript\"\" src=\"\"//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js\"\"></script>\n",
+    "<!-- include image popups -->\n",
+    "<script src=\"\"{{{{ site.baseurl }}}}/js/jquery.magnific-popup.js\"\"></script>\n",
+    "\n",
+    "<script type=\"\"text/javascript\"\">\n",
+    "      $(document).ready(function($) {{\n",
+    "        $('a.popup').magnificPopup({{\n",
+    "         type: 'image',\n",
+    "\t  gallery:{{\n",
+    "         enabled:true,\n",
+    "         navigateByImgClick: true,\n",
+    "         preload: [0,1] // Will preload 0 - before current, and 1 after the current image\n",
+    "       }},\n",
+    "image: {{\n",
+    "      titleSrc: function(item) {{\n",
+    "              return item.el.attr('title') + '&nbsp;' + item.el.attr('data-caption');\n",
+    "            }}\n",
+    "        }}\n",
+    "          // other options\n",
+    "      }});\n",
+    "}});\n",
+    "    </script>\n",
+    "\n",
+    "<script src=\"\"{{{{ site.baseurl }}}}/js/retina.min.js\"\"></script>\n",
+    "<!-- include Masonry -->\n",
+    "<script src=\"\"{{{{ site.baseurl }}}}/js/isotope.pkgd.min.js\"\"></script> \n",
+    "<!-- include mousewheel plugins -->\n",
+    "<script src=\"\"{{{{ site.baseurl }}}}/js/jquery.mousewheel.min.js\"\"></script>\n",
+    "<!-- include carousel plugins -->\n",
+    "<script src=\"\"{{{{ site.baseurl}}}}/js/jquery.tinycarousel.min.js\"\"></script>\n",
+    "<!-- include svg line drawing plugin -->\n",
+    "<script src=\"\"{{{{ site.baseurl }}}}/js/jquery.lazylinepainter.min.js\"\"></script>\n",
+    "<!-- include custom script -->\n",
+    "<script src=\"\"{{{{ site.baseurl }}}}/js/scripts.js\"\"></script>\n",
+    "<!-- Modernizr -->\n",
+    " <script src=\"\"{{{{ site.baseurl }}}}/js/modernizr.js\"\"></script>\n",
+    "\n",
+    "    \n",
+    "</body></html>\";\n",
+    "\n",
+    "File.WriteAllText(@\"C:\\Users\\kjawo\\Documents\\repo\\kjawogithubio\\gallery\\gallery02\\index.html\", output);"
+   ]
   }
  ],
  "metadata": {
