Change Architecure photography bg image.

--- a/GenerateGalleryIndex.ipynb
+++ b/GenerateGalleryIndex.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -201,7 +201,7 @@
     "title: \"\"Architecure photography\"\"\n",
     "description: \"\"Konrad Jaworski\"\"\n",
     "active: gallery\n",
-    "header-img: \"\"gallery/archive/g01/bg001.jpg\"\"\n",
+    "header-img: \"\"gallery/archive/g02/002_Więckowskiego_48_kamienicaNarozna_013.jpg\"\"\n",
     "album-title: \"\"\"\"\n",
     "images:\n",
     "\";\n",
