Fix typo. Remove some images.

--- a/GenerateGalleryIndex.ipynb
+++ b/GenerateGalleryIndex.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "var output = $@\"---\n",
     "layout: page\n",
-    "title: \"\"Architecure photography\"\"\n",
+    "title: \"\"Architecture photography\"\"\n",
     "description: \"\"Konrad Jaworski\"\"\n",
     "active: gallery\n",
     "header-img: \"\"gallery/archive/g02/002_Więckowskiego_48_kamienicaNarozna_013.jpg\"\"\n",
